<resources>
    <string name="app_name">Industrial Watch</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>

    <!-- admin dashboard -->
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="section">Section</string>
    <string name="supervisor">Supervisor</string>
    <string name="production">Production</string>
    <string name="product">Product</string>
    <string name="productivity">Productivity</string>
    <string name="presents">Presents</string>
    <string name="link_product">Link Product</string>
    <string name="employee_productivity">Employee Productivity</string>

    <!--- Employee dashboard -->
    <string name="employee_record">Employees Record</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_ranking">Employee Ranking</string>
    <string name="add_guest">Add Guest</string>
    <string name="attendance">Attendance</string>
    <string name="total_attendance">Total Attendance</string>
    <string name="summary">Summary</string>
    <string name="violations">Violations</string>
    <string name="select_date">Select Date</string>
    <string name="employee_monitoring">Employee Monitoring</string>
    <string name="defect_monitoring">Defect Monitoring</string>
    <string name="my_attendance">My Attendance</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="supervisor_dashboard">Supervisor Dashboard</string>


    <!--- production dashboard -->
    <string name="material">Materials</string>
    <string name="add_material">Add Material</string>
    <string name="add_raw_material">Add Raw Material</string>
    <string name="add_product">Add Product</string>
    <string name="inventory">Inventory</string>
    <string name="batch">Batch</string>
    <string name="inspection_angles">Inspection Angles</string>
    <string name="rejection_tolerance">Rejection Tolerance</string>
    <string name="formula_per_item">Formula per item</string>
    <string name="add_stock">Add Stock</string>
    <string name="multiple_angle_monitoring">Multiple Angle Monitoring</string>
    <string name="select_front_image">Select Front Image</string>
    <string name="select_back_image">Select Back Image</string>
    <string name="select_4_side_images">Select 4 Side Images</string>
    <string name="back">Back</string>

    <string name="add_section">Add Section</string>
    <string name="confirm_section">Confirm Section</string>
    <string name="confirm">Confirm</string>
    <string name="edit_section">Edit Section</string>
    <string name="edit_supervisor">Edit Supervisor</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_supervisor">Update Supervisor</string>
    <string name="enter_section_name">Enter Section Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="rules">Rules</string>
    <string name="rules_included">Rules Included</string>
    <string name="enter_fine">Enter Fine</string>
    <string name="time">Time</string>
    <string name="time_hint">00:00</string>

    <!-- Production !-->
    <string name="search_batch">Search Batch</string>
    <string name="search_employee">Search Employee</string>
    <string name="create_batch">Create Batch</string>
    <string name="create_account">Create Account</string>
    <string name="add_batch">Add Batch</string>
    <string name="add">Add</string>
    <string name="batch_number">Batch#</string>
    <string name="no_of_angles">No. of angles</string>
    <string name="tolerance_perc">Tolerance %</string>
    <string name="raw_materials">Raw Materials</string>
    <string name="new_materials">Raw Materials</string>
    <string name="new_material">New Material</string>
    <string name="material_name">Material Name</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_per_kg">Quantity/KG</string>
    <string name="price_per_kg">Price/KG</string>
    <string name="quantity_per_item">Quantity per Item</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="select_product">Select Product</string>
    <string name="packs_batch">Packs/batch</string>
    <string name="packs_pack">Piece/pack</string>
    <string name="batch_day">Batch/day</string>
    <string name="spinner_prompt">Select an item</string>
    <string name="save">Save</string>
    <string name="status">Status</string>
    <string name="dated">Dated</string>
    <string name="total_pieces">Total Pieces</string>
    <string name="total_fine">Total Fine</string>
    <string name="defected_pieces">Defected Pieces</string>
    <string name="total_yield">Total Yield</string>
    <string name="download_images">Download Images</string>
    <string name="role">Role</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="job_type">Job Type</string>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="salary">Salary</string>
    <string name="fine">Fine</string>

    <!-- arrays -->
    <string-array name="angles_list">
        <item>1 Top</item>
        <item>2 Flip</item>
        <item>3 Right</item>
        <item>4 Left</item>
        <item>5 Front</item>
        <item>6 Back</item>
    </string-array>
    <string-array name="unit_list">
        <item>G</item>
        <item>MG</item>
        <item>kG</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="products">Products</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="take_video">Record Video</string>
    <string name="video_library">Choose Video</string>
    <string name="product_number">Product#</string>
    <string name="start_detecting">Start Detecting</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="milling">Milling</string>
    <string name="casting">Casting</string>
    <string name="tooling">Tooling</string>
    <string name="defects">Defects</string>
    <string name="result">Result</string>
    <string name="smoking">Smoking</string>
    <string name="mobile_usage">Mobile Usage</string>
    <string name="sitting">Sitting</string>
</resources>