<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_dialogue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/add_raw_material"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_grey"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/material_name"
        android:inputType="text|textNoSuggestions"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:id="@+id/et_raw_material"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/primary_blue"
            android:id="@+id/btn_cancel"/>

        <Button
            android:id="@+id/btn_add_raw_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>

