<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.module.ui.admin.production.ProductActivity">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_secondary_toolbar" />

        <LinearLayout
            android:id="@+id/layout_wrapper_raw_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_toolbar"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_name"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_grey"
                    android:hint="@string/enter_name"
                    android:textColorHint="@color/hint_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/inspection_angles"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sp_angles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_spinner"
                    android:entries="@array/angles_list"
                    android:padding="16dp"
                    android:prompt="@string/spinner_prompt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/rejection_tolerance"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_rej_tolerance"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_grey"
                    android:hint="@string/rejection_tolerance"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/formula_per_item"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <include
                    android:id="@+id/included_layout"
                    layout="@layout/layout_recyclerview" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            style="@style/ButtonPrimaryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_wrapper_raw_material"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_product" />
    </RelativeLayout>
</layout>