<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".app.module.ui.supervisor.DefectsMonitoringActivity">

        <include layout="@layout/layout_toolbar"
            android:id="@+id/included_toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/product_number"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sp_prdouct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_spinner"
                android:padding="16dp"
                android:prompt="@string/spinner_prompt" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/batch_number"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sp_batch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_spinner"
                android:padding="16dp"
                android:prompt="@string/spinner_prompt" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonPrimaryStyle"
            android:text="@string/start_detecting"
            android:id="@+id/btn_start_detecting"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:id="@+id/layout_result_wrapper"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/total_pieces"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_total_piece"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/inter_medium"
                    android:text="--"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/defected_pieces"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_defected_piece"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/inter_medium"
                    android:text="--"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/defects"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:id="@+id/tv_milling_hint"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/milling"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_milling"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/inter_medium"
                    android:text="--"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/casting"
                    android:id="@+id/tv_casting_hint"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_casting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/inter_medium"
                    android:text="--"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tooling"
                    android:id="@+id/tv_tooling_hint"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_tooling"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/inter_medium"
                    android:text="--"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>